--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -1,1 +1,31 @@
 include_merge = False
+ignore_regexps = [
+        r'@minor', r'!minor',
+        r'@cosmetic', r'!cosmetic',
+        r'@refactor', r'!refactor',
+        r'@wip', r'!wip',
+        r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[p|P]kg:',
+        r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[d|D]ev:',
+        r'^(.{3,3}\s*:)?\s*[fF]irst commit.?\s*$',
+        r'^([Ii]gnore|[Mm]inor):',
+        r'[Vv]ersion [Bb]ump',
+        r'[Bb]ump(ing)? [Vv]ersion',
+]
+section_regexps = [
+    ('New', [
+	r'^[nN]ew\s*:\s*((dev|use?r|pkg|test|doc)\s*:\s*)?([^\n]*)$',
+	r'^[Ff]eat:',
+     ]),
+    ('Changes', [
+        r'^[cC]hg\s*:\s*((dev|use?r|pkg|test|doc)\s*:\s*)?([^\n]*)$',
+        r'^[Cc]hore:',
+     ]),
+    ('Fix', [
+        r'^[fF]ix\s*:\s*((dev|use?r|pkg|test|doc)\s*:\s*)?([^\n]*)$',
+        r'^[Ff]ix\s',
+     ]),
+
+    ('Other', None ## Match all lines
+     ),
+
+]
